# Discreet

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  DEPLOY_RASPBERRY_PI.md  DEVELOPER_GUIDE.md  Dockerfile  FEATURES.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  SELF_HOSTING_GUIDE.md  SETUP.md  TROUBLESHOOTING.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.cargo/: audit.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.sqlx/: query-001ae25b35aac9f9141735216db9f4547cd86ab69e444a06f5c249377eb8f4cf.json  query-00abd6dede8bdee5788d5004412ba136d501ef4942439a23731cf72506a19112.json  query-00e5b7c9fb817e1f9d8f29c779c47f89b79e365b3a0255e890a23b662854cb42.json  query-0160564e46b815f55ef6e113fcb145220d37e441e486af09c5257f7d89f78cc0.json  query-01be8f0813bc22a89fdd2579f36c1d0dcdde083ed668a6f184c557ada9062b6c.json  query-01cdddecf12dfa79677750f54f85fec81f885eb8091ea4c108ffb3e74a0c2e77.json  query-01d7ba704b49580f56b1c1ef26e7859b2a848ff6cdf194846de94468de648006.json  query-0246df78a16c76f4c50040b6a01ff50758d260f65311ead31e0093e89f007068.json  query-03b40d7d6702b90a61600e6e101172ee9fd353202edbe06709e7d5f510b44f41.json  query-0489e9179981cd30ec5f98bdd0300466dd5eefa06921c8b815a20c8ee47c9488.json  query-048debc7ec1054674bb9c1620606ac64ada0428c79db2ad1f72f5c6c2aaba361.json  query-04c96268d73bbae8ffbfe3469e73a75b8f429963355692100bbe6e45f5182483.json  query-04e63f9943442a1d163d678525f882e49fbf8de834ebd722ece61f9e3b22cc4e.json  query-051053ec40cfb296e8750d021aa86408dd55b521886b6f3493c55c1c2dbbb279.json  query-0560714583a52f8057027c7c6ad621d50acb6da19658fd4558a385c77fdb94be.json  query-05a8dc242c6f7b67d68363fbda0080e495ddc58ffe6ce6fca388fb39074cd09f.json  query-06cf86acaa1cf4679f153f6b0ba7859a62f510577b3f0cbebb5906a0648f778d.json  query-07e0f14e9bd0e6f074d58bda37fc0ced9f02c96fd37653a57d81663ded130cf5.json  query-08e7c5343dc72f7da35dba81f7d0db277b2a9a711d2765bb0d3899ab9e683052.json  query-08ef1a1aa36b6ddf2d1608decbca3e0426456aaebc4e07dc852aa9208f3bb8c1.json  query-09ed4e10d18b6ab5a779b08facd7eedb9d21c64db8dfcf1deceedb0dd0467555.json  query-0a188e4675fcd4648f2c85a0743d15a7a939148998d61a2e5fd8063fe2171824.json  query-0a57e680d468f6ad2f5c288e88acc05da0412e7f66921f5f766592b28deb1df2.json  query-0aae10d88a34459fbae5496256c8401ce5b96ad36643895828ce39b45efb53d2.json  query-0ad1bdacc235e92ea3309e846fed8c5d8808527e2d3b78595adc40e58edf453c.json  query-0b781a10611de560dd658f8897b3863c16d02b8b22f0ec4ac0b69e416866b574.json  query-0b924c5c2e74826ef6167c58826e1e7a6213435cd895e6be0efcc3ac5ee48b7c.json  query-0b9315aba32e441e31f5640e073949824e16572434dcdc4e4b183b1910795f3a.json  query-0bc963a59f95e00e87ebd0768bbe5c5cdb8adc85929d0864eaaebdbb1b5bcd69.json  query-0c361486b93d21e1bee76d8a4de519b9c9ea615ae2bb471f296b8c090d06cedd.json  query-0c3b0d661b4170199887c8919fc2f51fe8a4e14461328c2220ebde79535da1f0.json  query-0cfdffd5fcd402950386ca57cbd8a8c26e159f62a2385fdf7a4de812302814d0.json  query-0d0d042b24c3105552f60a9b600a2315f26b85ab0e9723f1458312348dfabdb6.json  query-0d612348eda04943117cf938c73b1d0c9f25124c7342ef41e20d82b379561d88.json  query-0d7f3949bd27f07941d2546882c8078369713e1e9e58cd39c374d54b14969c24.json  query-0dddf382a017f07fccb4a04197c24229fe6ad8bb29170a5584eb2d01063c1f81.json  query-0e698e3fe97c0128ce4678f571313bbce518b24e6a9e0449db5ccca5ee8d8269.json  query-0f3ada4881e387e3cf081ef67b53986e0ee000e7d11da031f1525079737721c5.json  query-0f5fc94560b863031c95c3928d87fc3040268ce984b652d0a80070ccce3dc8ec.json  query-0f71433decb55ebb557e5fbec58d1cf12d15fcb9b4b1918abef5643b086fb0fb.json  (+748 more)
GUIDE/: CONTRIBUTING.md  DEPLOYMENT.md  QUICKSTART.md
client/: citadel-client-wired.jsx  citadel-client.jsx  citadel-landing-page.html  generate-icons.mjs  index.html  manifest.json  message-parser.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts
client-next/: package-lock.json  package.json  vite.config.ts
deploy/: Caddyfile
discreet-crypto/: Cargo.toml
discreet-crypto/src/: group.rs  identity.rs  keypackage.rs  lib.rs  message.rs  sframe_voice.rs  wasm_bindings.rs
discreet-kernel/: Cargo.toml
discreet-kernel/fuzz/: Cargo.toml
discreet-kernel/fuzz/fuzz_targets/: fuzz_kernel_handle.rs  fuzz_sanitize.rs  fuzz_validate.rs
discreet-kernel/src/: auth.rs  crypto.rs  error.rs  lib.rs  oracle_guard.rs  permissions.rs  render_model.rs  sanitize.rs  sealed_storage.rs  state.rs  types.rs  validation.rs  wasm_api.rs
discreet-kernel/tests/: integration_tests.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  BAA_TEMPLATE.md  BOT_SDK.md  BUILD_AND_RUN.md  BUILD_MLS.md  CITADEL_ARCHITECTURE.md  CITADEL_MODULES_OVERVIEW.md  CITADEL_README.md  Caddyfile.production  DEPLOY_ORACLE.md  DEPLOY_RASPBERRY_PI.md  DEVELOPER_GUIDE.md  DISASTER_RECOVERY.md  FILE_MAP.md  INCIDENT_RESPONSE.md  LICENSE_AUDIT.md  OPENSSF_ASSESSMENT.md  SECURITY_AUDIT.md  SECURITY_KERNEL.md  SELF_HOSTING.md  SELF_HOSTING_GUIDE.md  SETUP_GUIDE.md  THREAT_MODEL.md  TROUBLESHOOTING.md  TROUBLESHOOTING_DESKTOP.md  TROUBLESHOOTING_MOBILE.md  TURN_SETUP.md  USER_MANUAL.md  discreet.service  index.html
migrations/: 001_schema.sql  002_reactions.sql  003_friends.sql  004_codex_schema_sync.sql  005_totp.sql  006_channel_perms_ttl.sql  007_search_privacy.sql  008_bots_and_member_label.sql  009_reply_and_mentions.sql  010_group_dms.sql  011_file_attachments.sql  012_custom_emoji.sql  013_forum_channels.sql  014_events.sql  015_email_tokens.sql  016_server_discovery.sql  017_soundboard.sql  018_account_tiers.sql  019_bot_channels.sql  020_meetings.sql  021_polls.sql  022_totp.sql  023_bot_config_expand.sql  024_invite_expiry.sql  025_unique_channel_name.sql  026_mls_key_distribution.sql  027_waitlist.sql  028_agent_provider_columns.sql  029_agent_episodic_facts.sql  030_platform_permissions.sql  031_dev_tokens.sql  032_registrations_log.sql  033_user_settings_locale.sql  034_deleted_user_ids.sql  035_platform_bans.sql  036_automod_configs.sql  037_bug_reports.sql  038_recovery_key.sql  039_slash_commands_enabled.sql  (+69 more)
(+382 files in other folders)
