[package]
name = "discreet-server"
version = "0.4.0-alpha"
edition = "2021"
rust-version = "1.80"
authors = ["John <dev@discreetai.net>"]
description = "Discreet — end-to-end encrypted community platform — the server can't read your messages"
license = "AGPL-3.0-or-later"
repository = "https://github.com/CitadelOpenSource/Discreet"
keywords = ["discreet", "e2ee", "mls", "encryption", "discord-alternative"]
categories = ["network-programming", "cryptography"]

[features]
default = []
# Enable when client-side MLS integration is ready:
mls = ["dep:openmls", "dep:openmls_rust_crypto"]
# Enable when PQ key exchange endpoints are wired:
post-quantum = ["dep:ed25519-dalek", "dep:x25519-dalek"]
# Post-quantum KEM + signatures (FIPS 203, 204). Opt-in — requires nightly-compatible deps.
pq = ["dep:ml-kem", "dep:ml-dsa"]

[dependencies]
# ── Web framework ─────────────────────────────────────────
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "fs"] }
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }

# ── Serialization ─────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Database ──────────────────────────────────────────────
# NOTE: "migrate" feature is REQUIRED for sqlx::migrate!() macro in main.rs
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio", "tls-rustls", "postgres",
    "uuid", "chrono", "json",
    "macros", "migrate", "ipnetwork"
] }

# ── Cache / Pubsub ────────────────────────────────────────
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# ── Auth ──────────────────────────────────────────────────
argon2 = "0.5"
bip39 = "2.2"                    # BIP-39 mnemonic seed phrases for anonymous registration
jsonwebtoken = "9"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
oauth2 = "5"
url = "2"                    # WebAuthn RP origin parsing
xmlparser = "0.13"           # SAML XML response parsing
html-escape = "0.2"         # OG meta tag entity decoding (link preview)
ldap3 = { version = "0.12", default-features = false, features = ["tls-native"] }

# ── Crypto (currently used) ───────────────────────────────
sha1 = "0.10"                # TURN ephemeral credentials (HMAC-SHA1, CoTURN standard)
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
base64 = "0.22"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
hex = "0.4"

# ── Crypto — future: classical key exchange (behind feature flag) ──
ed25519-dalek = { version = "2", features = ["serde", "rand_core"], optional = true }
x25519-dalek = { version = "2", features = ["serde", "static_secrets"], optional = true }
aes-gcm = "0.10"

# ── Crypto — future: post-quantum (behind pq feature flag) ──
ml-kem = { version = "0.2", optional = true }
ml-dsa = { version = "0.1.0-rc.7", optional = true }

# ── Crypto — future: MLS (behind feature flag) ───────────
openmls = { version = "0.8.1", optional = true }
openmls_rust_crypto = { version = "0.5.1", optional = true }

# ── Archive export ────────────────────────────────────────
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# ── Message import ───────────────────────────────────────
rusqlite = { version = "0.32", features = ["bundled"] }  # iMessage chat.db SQLite reader
quick-xml = "0.36"                                        # Android SMS Backup & Restore XML parser

# ── PDF generation ────────────────────────────────────────
printpdf = "0.7"

# ── QR code generation ────────────────────────────────────
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

# ── Utilities ─────────────────────────────────────────────
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
dotenvy = "0.15"
envy = "0.4"
async-trait = "0.1"
regex-lite = "0.1"

# ── HTTP client (AI agent provider calls) ─────────────────
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# ── Build support ────────────────────────────────────────
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
