[package]
name = "discreet-crypto"
version = "0.1.0"
edition = "2021"
description = "MLS (RFC 9420) cryptographic layer for Discreet"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["openmls_rust_crypto"]
wasm = ["js", "wasm-bindgen", "getrandom/js", "openmls_rust_crypto"]
js = ["openmls/js"]

# Pin ALL openmls crates to the SAME git revision to avoid openmls_traits version splits.
# The v0.3 sub-crates on crates.io depend on openmls_traits 0.3,
# but openmls 0.7+ needs openmls_traits 0.4. Using git main ensures alignment.
[dependencies]
openmls = { git = "https://github.com/openmls/openmls", branch = "main" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls", branch = "main", optional = true }
openmls_basic_credential = { git = "https://github.com/openmls/openmls", branch = "main" }
openmls_traits = { git = "https://github.com/openmls/openmls", branch = "main" }
tls_codec = { version = "0.4", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", optional = true }
once_cell = "1"
base64 = "0.22"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde", "js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
