[package]
name = "discreet-crypto"
version = "0.1.0"
edition = "2021"
description = "MLS (RFC 9420) cryptographic layer for Discreet"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["openmls_rust_crypto"]
wasm = ["js", "wasm-bindgen", "getrandom/js", "openmls_rust_crypto"]
js = ["openmls/js"]

# All openmls crates pinned to same 0.8.x release on crates.io.
[dependencies]
openmls = "0.8.1"
openmls_rust_crypto = { version = "0.5.1", optional = true }
openmls_basic_credential = "0.5.0"
openmls_traits = "0.5.0"
tls_codec = { version = "0.4", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", optional = true }
once_cell = "1"
base64 = "0.22"
sframe = { version = "0.5", default-features = false, features = ["ring"] }
hkdf = "0.12"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde", "js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
