[package]
name = "discreet-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.8"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
ammonia = "4"
base64 = "0.22"
once_cell = "1"
typeshare = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "WorkerGlobalScope",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "AesGcmParams",
    "AesKeyGenParams",
] }
js-sys = "0.3"

[dev-dependencies]
arbitrary = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Disable wasm-pack's bundled wasm-opt post-processor. The bundled Binaryen
# version doesn't support bulk memory operations (memory.copy, memory.fill)
# that modern Rust emits by default. Rust's own LTO + opt-level = "z" already
# handle optimization during compilation — wasm-opt is redundant here.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
